tests/NormalTests/paczka1/fuzzy1/23310176.err
Error in line 3: S432 A5VV 1V,8
Error in line 6: U33D S432 94,3
Error in line 8: 3xuzS S378 71,5
Error in line 10: U33D S378 19,6
Error in line 14: kiMqMlPn7r S799 91,8
Error in line 1: S432 A599 5,0
Error in line 15: kiMqMlPn7r S432 92,0
Error in line 20: S432 S799 28,8
Error in line 29: 3xuzS S799 77,1
